--- a/Free Tärn YouTube converter/Free Tärn YouTube converter.csproj
+++ b/Free Tärn YouTube converter/Free Tärn YouTube converter.csproj
@@ -94,7 +94,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="youtube-dl.exe" />
+    <Content Include="youtube-dl.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
