ffmpeg folderis juba lubatud

--- a/Free Tärn YouTube converter/Free Tärn YouTube converter.csproj
+++ b/Free Tärn YouTube converter/Free Tärn YouTube converter.csproj
@@ -94,6 +94,12 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ffmpeg.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ffprobe.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="youtube-dl.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
